# doverde

./: .gitignore  LICENSE  README.md  TODO.md  TODO.txt  config.yaml  config.yaml.template  pyproject.toml  requirements.txt
data/classified/: manual-exp-classification.xlsx
doverde/: 01_load.py  02_eda.py  98_dev_tools.py  config.py
dpr_revex/: 01_load.py  02_eda.py  98_dev_tools.py
studies/dnrec_dpr/: 10_analysis_dnrec_dpr.py  JOURNAL.md
